5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_1014.log
== TEST (2019-03-23 14:06:37) 
-- CODE:
 var = float(input(total de vendas))
-- ERROR:
File "XXXX", line 1
    var = float(input(total de vendas))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:06:48) 
-- CODE:
 var = float(input("total de vendas"))
-- ERROR:
File "XXXX", line 1
    var = float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:08:11) 
-- CODE:
 total  = x
-- ERROR:
File "XXXX", line 1
    total  = x
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:09:01) 
-- CODE:
var = input("total de vendas")
-- ERROR:
File "XXXX", line 1
    total  = x
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:09:19) 
-- CODE:
var = float(input("total de vendas"))
-- ERROR:
File "XXXX", line 1
    total  = x
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:10:39) 
-- CODE:
var = float(input("total de vendas"))
lucro = var*30%/100
-- ERROR:
File "XXXX", line 2
    lucro = var*30%/100
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:11:12) 
-- CODE:
var = float(input("total de vendas"))
lucro = var*30/100
-- ERROR:
File "XXXX", line 2
    lucro = var*30%/100
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:11:37) 
-- CODE:
var = float(input("total de vendas"))
lucro = var*30/100
print(round(lucro, 2))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:11:42) 
-- CODE:
var = float(input("total de vendas"))
lucro = var*30/100
print(round(lucro, 2))
-- EXECUTION TIME:
0.13481
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
